<resources>
    <string name="app_name">Biker Life Guardian</string>

    <string name="personal_details">Informations personnelles</string>
    <string name="firstname">Prénom</string>
    <string name="lastname">Nom</string>
    <string name="birthdate">Date de naissance</string>
    <string name="sex">Sexe</string>
    <string name="bloodGroup">Groupe Sanguin</string>
    <string name="phone">Téléphone</string>
    <string name="languages">Langues parlées</string>
    <string name="allergies">Allergies</string>
    <string name="medicines">Médicament Pris</string>
    <string name="health_issues">Problèmes de santé</string>
    <string name="legal_rep">Représenant légal</string>
    <string name="comments">Commentaires</string>
    <string name="male">Mr</string>
    <string name="female">Mme</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="save">Enregistrer</string>

    <string name="OK">OK</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="cancel">Annuler</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="title_activity_login">Connexion</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Adresse email invalide</string>
    <string name="error_invalid_password">Mot de passe incorect</string>
    <string name="error_incorrect_password">Mot de passe incorect</string>
    <string name="error_field_required">Ce champ est requis</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Créer un compte</string>

</resources>
